structured the website

--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Stonks</title>
 </head>
 <body>
     <h1>Stonks </h1>
+
+    <main>
+        <label for="price1">Initial Price</label>
+        <input type="number" name="" id="price1">
+        <label for="no-of-stocks">Number of Stocks</label>
+        <input type="number" name="" id="no-of-stocks">
+        <label for="current-price">Current Price</label>
+        <input type="number" name="" id="current-price">
+        <button id="output-btn">Show me</button>
+        <div id="output"></div>
+    </main>
+
     
 </body>
 </html>
