selecting all elements

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
     <main>
         <label for="price1">Initial Price</label>
-        <input type="number" name="" id="price1">
+        <input type="number" placeholder="Enter the initial price" name="" id="price1">
         <label for="no-of-stocks">Number of Stocks</label>
-        <input type="number" name="" id="no-of-stocks">
+        <input type="number" placeholder="Enter the number of stocks" name="" id="no-of-stocks">
         <label for="current-price">Current Price</label>
-        <input type="number" name="" id="current-price">
+        <input type="number" placeholder="Enter the current price" name="" id="current-price">
         <button id="output-btn">Show me</button>
         <div id="output"></div>
     </main>
